--- a/Melonoma_Classification_randeep_sasidharan_nn.ipynb
+++ b/Melonoma_Classification_randeep_sasidharan_nn.ipynb
@@ -2563,6 +2563,7 @@
         "outputId": "61e396fd-1318-4bd1-b1c1-3d41bf68a2fe"
       },
       "source": [
+        "# Finding the amount of images in Train & Test folders\n",
         "image_count_train = len(list(data_dir_train.glob('*/*.jpg')))\n",
         "print(image_count_train)\n",
         "image_count_test = len(list(data_dir_test.glob('*/*.jpg')))\n",
@@ -2753,6 +2754,7 @@
         "outputId": "c75a3723-5db1-49a9-a42b-e190e153f1a2"
       },
       "source": [
+        "# Visualising the data of each class. Picking random images from the folder.\n",
         "fig = plt.figure(figsize=(25,12))\n",
         "for i in range(len(class_names)):\n",
         "    img_folder = data_dir_train/class_names[i]\n",
@@ -2806,6 +2808,7 @@
         "id": "7wZlKRBEGNtU"
       },
       "source": [
+        "# Setting values as per assignment guidance.\n",
         "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
         "train_ds = train_ds.cache().shuffle(1000).prefetch(buffer_size=AUTOTUNE)\n",
         "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)"
@@ -2829,7 +2832,7 @@
         "id": "ync9xoW7GZgn"
       },
       "source": [
-        "# model architecture\n",
+        "# Defining the first model architecture. \n",
         "model = Sequential()\n",
         "model.add(Rescaling(scale=1./255, input_shape=(180, 180, 3)))\n",
         "model.add(Conv2D(32,(5, 5), padding='same', activation=\"relu\",))\n",
@@ -2863,7 +2866,7 @@
         "id": "XB8wKtiPGe1j"
       },
       "source": [
-        "### Todo, choose an appropirate optimiser and loss function\n",
+        "### Compiling the model with \"Adam\" optimizer and \"categorical cross entropy\" loss function\n",
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
@@ -2945,6 +2948,7 @@
         "outputId": "442b5912-d4e7-4a87-fe2e-09577d4efd6e"
       },
       "source": [
+        "# Training the model with 20 epochs\n",
         "epochs = 20\n",
         "history = model.fit(\n",
         "  train_ds,\n",
@@ -3012,15 +3016,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JvPphJYuSZhK"
-      },
-      "source": [
-        "#### Todo: Write your findings after the model fit, see if there is an evidence of model overfit or underfit"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -3031,7 +3026,7 @@
         "outputId": "5c9164d6-0b3c-4a88-f220-274bc2cd3ed4"
       },
       "source": [
-        "# Run result with 5*5 input kernel\n",
+        "# Visualizing the model results - As per guidance on the assignment\n",
         "acc = history.history['accuracy']\n",
         "val_acc = history.history['val_accuracy']\n",
         "\n",
@@ -3077,10 +3072,19 @@
         "id": "3vRTPbJEn-pX"
       },
       "source": [
-        "### Findings from first CNN Model Run\n",
+        "### - **Randeep** : Findings from first CNN Model Run\n",
         " - After 5 epochs the validation accuracy stopped improving while the training accuracy is improving till 20 epochs. \n",
         " - Clear sign of overfitting.\n",
         " - Validation loss reducing trend stopped after 5 epochs and started increasing after 10 epochs"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aV70tpqObm7Z"
+      },
+      "source": [
+        "#### **Data Augmentation**: Modify the model with Data Augmentation so that we can reduce the model overfitting."
       ]
     },
     {
@@ -3089,8 +3093,7 @@
         "id": "22hljAl6GykA"
       },
       "source": [
-        "# Todo, after you have analysed the model fit history for presence of underfit or overfit, choose an appropriate data augumentation strategy. \n",
-        "# doing data augmentation with Random Flit & Random Rotation\n",
+        "# Defining a data augmentation layer with Random Flit & Random Rotation\n",
         "data_augmentation = tf.keras.Sequential([\n",
         "  layers.experimental.preprocessing.RandomFlip(\"horizontal_and_vertical\"),\n",
         "  layers.experimental.preprocessing.RandomRotation(0.2),\n",
@@ -3110,7 +3113,8 @@
         "outputId": "22a3a206-0756-4e97-a5fa-1ab1548a572c"
       },
       "source": [
-        "# Todo, visualize how your augmentation strategy works for one instance of training image.\n",
+        "# Testing the Data Augmentation on a single picture on Class 4.\n",
+        "Todo, visualize how your augmentation strategy works for one instance of training image.\n",
         "fig = plt.figure(figsize=(8,8))\n",
         "img_folder= os.path.join(data_dir_train, class_names[4])\n",
         "print(image_path)\n",
@@ -3168,8 +3172,7 @@
         "id": "XhKDHlUdTuSX"
       },
       "source": [
-        "### Todo:\n",
-        "### Create the model, compile and train the model\n"
+        "### Create the Model again including the data augmentation of Random Flip & Random Rotation, compile and train the model\n"
       ]
     },
     {
@@ -3178,9 +3181,7 @@
         "id": "W3V4l-O9G3dM"
       },
       "source": [
-        "## You can use Dropout layer if there is an evidence of overfitting in your findings\n",
-        "## Your code goes here\n",
-        "# model architecture\n",
+        "## Updated model architecture - Added Dropouts, Random Flip & Random Rotations on the existing data\n",
         "model = Sequential()\n",
         "model.add(Rescaling(scale=1./255, input_shape=(180, 180, 3)))\n",
         "model.add(RandomFlip(\"horizontal_and_vertical\"))\n",
@@ -3218,8 +3219,7 @@
         "id": "_-7yTm8IG8zR"
       },
       "source": [
-        "## Your code goes here\n",
-        "### Todo, choose an appropirate optimiser and loss function\n",
+        "## Reusing the same optimizer and loss function as the first model\n",
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
@@ -3311,7 +3311,7 @@
         "outputId": "618e2a2c-1c1f-41c3-acaa-ded5c5a07949"
       },
       "source": [
-        "## Your code goes here, note: train your model for 20 epochs\n",
+        "## Training the model for 20 epochs\n",
         "epochs = 20\n",
         "history = model.fit(\n",
         "  train_ds,\n",
@@ -3389,6 +3389,7 @@
         "outputId": "28ac5f02-62bf-4ec3-c0d6-618bb86a127c"
       },
       "source": [
+        "# Visualizing the results of 2nd model run.\n",
         "acc = history.history['accuracy']\n",
         "val_acc = history.history['val_accuracy']\n",
         "\n",
@@ -3434,7 +3435,11 @@
         "id": "0-AUR_b7UcaK"
       },
       "source": [
-        "#### Todo: Write your findings after the model fit, see if there is an evidence of model overfit or underfit. Do you think there is some improvement now as compared to the previous model run?"
+        "#### **Randeep** : Findings from 2nd Model run.\n",
+        "\n",
+        "> Model overfitting as reduced with data augmentation <BR>\n",
+        "> Validation loss has a downward trend. <BR>\n",
+        "> The overall accuracy has reduced or hovering around 50% for both validation & training set. <BR>\n"
       ]
     },
     {
@@ -3443,7 +3448,7 @@
         "id": "7TdDi4u-VTkW"
       },
       "source": [
-        "#### **Todo:** Find the distribution of classes in the training dataset.\n",
+        "#### **Class Imbalance:** Find the distribution of classes in the training dataset.\n",
         "#### **Context:** Many times real life datasets can have class imbalance, one class can have proportionately higher number of samples compared to the others. Class imbalance can have a detrimental effect on the final model quality. Hence as a sanity check it becomes important to check what is the distribution of classes in the data."
       ]
     },
@@ -3457,7 +3462,7 @@
         "outputId": "7269f64f-9d25-43b0-8298-44a87fbb000d"
       },
       "source": [
-        "## Your code goes here.\n",
+        "## Printing the total count of images as well as count of images per class.\n",
         "total_cnt = len(list(data_dir_train.glob('*/*.jpg')))\n",
         "print(\"Total Train Count : \", total_cnt)\n",
         "for i in range(len(class_names)) :\n",
@@ -3492,7 +3497,7 @@
         "id": "4csQL1dvO0b2"
       },
       "source": [
-        "#### **Todo:** Write your findings here: \n",
+        "#### **Randeep:** Findings of class imbalance : \n",
         "#### - Which class has the least number of samples?\n",
         "\n",
         "> *seborrheic keratosis has a count of 77 samples.* <BR>\n",
@@ -3510,7 +3515,7 @@
         "id": "Hb-stKyHPf8v"
       },
       "source": [
-        "#### **Todo:** Rectify the class imbalance\n",
+        "#### **Generate Data:** To Rectify Class Imbalance Rectify the class imbalance\n",
         "#### **Context:** You can use a python package known as `Augmentor` (https://augmentor.readthedocs.io/en/master/) to add more samples across all classes so that none of the classes have very few samples."
       ]
     },
@@ -3524,6 +3529,7 @@
         "outputId": "d5abe995-50e3-4901-92c8-89390a55f6cf"
       },
       "source": [
+        "# Installing Augmentor package\n",
         "!pip install Augmentor"
       ],
       "execution_count": null,
@@ -3567,7 +3573,7 @@
         "outputId": "54904cd2-802b-4068-a4f3-0c5c0f641f89"
       },
       "source": [
-        "\n",
+        "# Generating output images from source.\n",
         "import Augmentor\n",
         "for i in class_names:\n",
         "    path_to_training_dataset= os.path.join(data_dir_train, i)\n",
@@ -3748,6 +3754,7 @@
         "outputId": "4abc4dbf-003e-4e58-b725-bdb3c8dedd31"
       },
       "source": [
+        "# Counting the number of files generated.\n",
         "image_count_train = len(list(data_dir_train.glob('*/output/*.jpg')))\n",
         "print(image_count_train)"
       ],
@@ -5850,6 +5857,7 @@
         "outputId": "ae0c971e-e94f-425f-be23-2ce62f2da3a6"
       },
       "source": [
+        "# Split of data for each class.\n",
         "df2['Label'].value_counts()"
       ],
       "execution_count": null,
@@ -5935,21 +5943,8 @@
         "id": "9EnspeMbRWNs"
       },
       "source": [
-        "#### **Todo**: Train the model on the data created using Augmentor"
+        " Train the model on the data created using Augmentor"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hFcj1XgndRWz"
-      },
-      "source": [
-        "batch_size = 32\n",
-        "img_height = 180\n",
-        "img_width = 180"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -5957,7 +5952,7 @@
         "id": "0haOU11Ey8ey"
       },
       "source": [
-        "#### **Todo:** Create a training dataset"
+        "Create a training dataset"
       ]
     },
     {
@@ -6027,7 +6022,7 @@
         "id": "mwNJVDuBP5kf"
       },
       "source": [
-        "#### **Todo:** Create a validation dataset"
+        " Create a validation dataset"
       ]
     },
     {
@@ -6072,7 +6067,7 @@
         "id": "JaoWeOEpVjqH"
       },
       "source": [
-        "#### **Todo:** Create your model (make sure to include normalization)"
+        "Creating the 3rd model"
       ]
     },
     {
@@ -6121,7 +6116,7 @@
         "id": "H47GWmLbdRW1"
       },
       "source": [
-        "## your code goes here\n",
+        "## Again compiling the model with Adam optimizer and categorical crossentropy as the loss function.\n",
         "model.compile(optimizer='adam',\n",
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
@@ -6217,7 +6212,7 @@
         "outputId": "f86d4e09-acb2-48a2-b46f-42d4d1011518"
       },
       "source": [
-        "## Your code goes here, note: train your model for 20 epochs\n",
+        "## Train your model for 50 epochs\n",
         "epochs = 50\n",
         "history = model.fit(\n",
         "  train_ds,\n",
@@ -6341,7 +6336,7 @@
         "id": "iuvfCTsBWLMp"
       },
       "source": [
-        "#### **Todo:**  Visualize the model results"
+        "Visualize the model results"
       ]
     },
     {
@@ -6400,20 +6395,14 @@
         "id": "Way4lakC4_p0"
       },
       "source": [
-        "#### **Todo:**  Analyze your results here. Did you get rid of underfitting/overfitting? Did class rebalance help?\n",
+        "#### **Randeep :**  \n",
+        "\n",
+        "\n",
+        "> Generating additional data helped in improving the accuracy. <BR>\n",
+        "> Overfitting is not seen in Model 2 & Model 3. <BR>\n",
+        "> Correcting the class imbalance on training data helped improve the model.\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nV2BHg1dWrdY"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
